# FractalExplorer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
headers/: display.h  file_utilities.h  mandelbrot.h  mesh.h  render_texture.h  shader_program.h
shaders/: mandelbrot.frag  pass_through.vert  texture.frag  texture.vert
src/: display.cpp  file_utilities.cpp  main.cpp  mandelbrot.cpp  mesh.cpp  render_texture.cpp  shader_program.cpp
